k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haquocbao-fe
  namespace: haquocbao-domain
  labels:
    app: haquocbao-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: haquocbao-fe
  template:
    metadata:
      labels:
        app: haquocbao-fe
    spec:
      containers:
      - name: haquocbao-fe-container
        image: 21120414/haquocbao.id.vn:18
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
