k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haquocbao-fe-service
  namespace: haquocbao-domain
spec:
  selector:
    app: haquocbao-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
